infrastructure/03-apps/cloudreve/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudreve
  namespace: cloudreve
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.cilium.io/loadbalancer-mode: "shared"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - drive.foobarbaz.fr
      secretName: cloudreve-tls
  rules:
    - host: drive.foobarbaz.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudreve
                port:
                  number: 5212
