infrastructure/03-apps/cloudreve/manifests/policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cloudreve-policy
  namespace: cloudreve
spec:
  endpointSelector:
    matchLabels:
      app: cloudreve
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: "5212"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": traefik
        "k8s:app.kubernetes.io/name": traefik
    toPorts:
    - ports:
      - port: "5212"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": alloy
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
          - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": cloudreve
        "k8s:app": cloudreve-postgres
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": auth
        app: keycloak
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  - toEntities:
    - world
    - cluster
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "80"
        protocol: TCP
